# Peinbol

./: README.md  build.gradle  settings.gradle
NativeActivityTest/app/: build.gradle
NativeActivityTest/app/src/main/: AndroidManifest.xml
NativeActivityTest/app/src/main/assets/: fragmentShader.glsl
NativeActivityTest/app/src/main/cpp/: CMakeLists.txt  JNI_NuklearUIRenderer.cpp  JNI_PhysicsImpl.cpp  PhysicsImpl.h  native-lib.cpp  nk_gles2_impl.h  nuklear.h  stb_image.h
NativeActivityTest/app/src/main/res/layout/: activity_main.xml
NativeActivityTest/app/src/main/res/values/: strings.xml
NativeActivityTest/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
src/main/java/: HelloWorld.java  PNGDecoder.java  Texture.java
src/main/kotlin/: Box.kt  Game.kt  Messages.kt  Physics.kt  Server.kt  Util.kt  Window.kt
src/main/kotlin/com/peinbol/: Audio.kt  Box.kt  Calculator.java  Color.kt  CrosshairUI.kt  Demo.java  Game.kt  IOUtil.java  Messages.kt  Network.kt  NkGLBackend.java  NkUIDrawable.kt  NuklearGLDrawer.java  PNGDecoder.java  Physics.kt  PlayerMovement.kt  Server.kt  Texture.java  Textures.kt  Util.kt  Window.kt
src/main/kotlin/com/peinbol/client/: Audio.kt  AudioManager.kt  AudioSource.kt  Audios.kt  ChatUI.kt  Client.kt  ClientStatsUI.kt  CrosshairUI.kt  HealthUI.kt  IOUtil.java  NkGLBackend.java  NkUIDrawable.kt  PNGDecoder.java  PlayersInfoUI.kt  Texture.java  Window.kt  WorldRenderer.kt
src/main/kotlin/com/peinbol/server/: Server.kt
src/main/kotlin/com/peinbol/test/: GLTest.java  (+3 more)
src/main/resources/: fragmentShader.glsl  vertexShader.glsl
(+43 files in other folders)
